# MemoryGame

./: .clang-format  CMakeLists.txt  README.md  linki  main.cpp  review_drownek  run_in_terminal.bat  xd.txt
game/: Game.cpp  Game.h
game/backup/: BackupService.cpp  BackupService.h
game/board/: Board.cpp  Board.h  BoardManager.cpp  BoardManager.h  SizeProvider.h
game/board/card/: Card.cpp  Card.h  CardTypeService.h
game/board/difficulty/: Difficulty.h  DifficultyProvider.h
game/board/queue/: TurnQueue.cpp  TurnQueue.h
game/user/: User.cpp  User.h  UserManager.cpp  UserManager.h  UserProvider.cpp  UserProvider.h
resources/: xd.txt
src/: main.cpp
src/game/: CardSelector.cpp  CardSelector.h  Game.cpp  Game.h  GameState.cpp  GameState.h  Menu.cpp  Menu.h
src/game/achievement/: Achievement.h  AchievementManager.h
src/game/backup/: BackupService.cpp  BackupService.h  LoadHandler.cpp  LoadHandler.h
src/game/board/: Board.cpp  Board.h  BoardManager.cpp  BoardManager.h  SizeProvider.h
src/game/board/card/: CardTypeService.h
src/game/board/queue/: TurnQueue.cpp  TurnQueue.h
src/game/score/: ScoreManager.cpp  ScoreManager.h
src/game/user/: User.cpp  User.h  UserGameStats.cpp  UserGameStats.h  UserManager.cpp  UserManager.h  UserProvider.cpp  UserProvider.h  UserRepository.cpp  UserRepository.h  UserStatistics.cpp  UserStatistics.h
